--- a/.github/workflows/01-building-blocks.yaml
+++ b/.github/workflows/01-building-blocks.yaml
@@ -1,5 +1,5 @@
 name: 01-Building-Blocks
-on: [push, workflow_dispatch]
+on: [workflow_dispatch]
 jobs:
     echo-hello:
         runs-on: ubuntu-latest
@@ -12,8 +12,8 @@ jobs:
         steps:
             - name: Failed step
               run: |
-                  ech "i will fail"
-                  exit 0
+                  echo "i will fail"
+                  exit 1
             - name: Goodbye!
               run: echo "Goodbye!"        
 
