--- a/.github/workflows/04-using-actions.yaml
+++ b/.github/workflows/04-using-actions.yaml
@@ -6,5 +6,15 @@ jobs:
         steps:
             - name: Checkout Cod
               uses: actions/checkout@v4
-            - name: Printing Folders
-              run: tree   
+            # - name: Printing Folders
+            #   run: tree   
+            - name: Setup Node 
+              uses: actions/setup-node@v4
+              with:
+                node-version: '20.x'
+            - name: Install Dependencies 
+              run: |
+                 cd 04-using-actions/react-app
+                 npm ci 
+
+                  
