--- a/.github/workflows/04-using-actions.yaml
+++ b/.github/workflows/04-using-actions.yaml
@@ -16,5 +16,9 @@ jobs:
               run: |
                  cd 04-using-actions/react-app
                  npm ci 
+            - name: Run Unit Tests
+              run: |
+                 cd 04-using-actions/react-app
+                 npm run test     
 
                   
