--- a/.github/workflows/04-using-actions.yaml
+++ b/.github/workflows/04-using-actions.yaml
@@ -19,6 +19,8 @@ jobs:
             - name: Run Unit Tests
               run: |
                  cd 04-using-actions/react-app
-                 npm run test     
+                 npm run test
+            - name: build
+              run: npm build          
 
                   
