--- a/.github/workflows/04-using-actions.yaml
+++ b/.github/workflows/04-using-actions.yaml
@@ -21,6 +21,9 @@ jobs:
                  cd 04-using-actions/react-app
                  npm run test
             - name: build
-              run: npm build          
+              run: |
+                  cd 04-using-actions/react-app
+                  npm build
+
 
                   
