--- a/.github/workflows/04-using-actions.yaml
+++ b/.github/workflows/04-using-actions.yaml
@@ -1,29 +1,28 @@
 name: 04-workflow
 on: [push]
 jobs:
-    build:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout Cod
-              uses: actions/checkout@v4
-            # - name: Printing Folders
-            #   run: tree   
-            - name: Setup Node 
-              uses: actions/setup-node@v4
-              with:
-                node-version: '20.x'
-            - name: Install Dependencies 
-              run: |
-                 cd 04-using-actions/react-app
-                 npm ci 
-            - name: Run Unit Tests
-              run: |
-                 cd 04-using-actions/react-app
-                 npm run test
-            - name: build
-              run: |
-                  cd 04-using-actions/react-app
-                  npm run build
-
-
-                  
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Cod
+        uses: actions/checkout@v4
+      # - name: Printing Folders
+      #   run: tree
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20.x"
+      - name: Install Dependencies
+        run: |
+          cd 04-using-actions/react-app
+          npm ci
+      - name: Run Unit Tests
+        run: |
+          cd 04-using-actions/react-app
+          npm run test
+      - name: build
+        run: |
+          cd 04-using-actions/react-app
+          npm run build
+      - name: Build and Deploy React app to GitHub Pages
+        uses: omkartapale/react-deployment-gh-pages@v1.0.0
