--- a/04-using-actions/react-app/package.json
+++ b/04-using-actions/react-app/package.json
@@ -36,5 +36,8 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "web-vitals": "^4.2.4"
-  }
+  },
+  
+  "homepage": "https://mis-application.github.io/project"
+  
 }
