pull request added

--- a/.github/workflows/04-using-actions.yaml
+++ b/.github/workflows/04-using-actions.yaml
@@ -20,9 +20,9 @@ jobs:
         run: |
           cd 04-using-actions/react-app
           npm run test
-      - name: build
-        run: |
-          cd 04-using-actions/react-app
-          npm run build
-      - name: Build and Deploy React app to GitHub Pages
-        uses: omkartapale/react-deployment-gh-pages@v1.0.0
+      # - name: build
+      #   run: |
+      #     cd 04-using-actions/react-app
+      #     npm run build
+      # - name: Build and Deploy React app to GitHub Pages
+      #   uses: omkartapale/react-deployment-gh-pages@v1.0.0
