--- a/.github/workflows/event_trigger.yaml
+++ b/.github/workflows/event_trigger.yaml
@@ -1,5 +1,10 @@
 name: 02-workflow
-on: [push]
+on: 
+    push:
+    pull_request:
+    schedule:
+    - cron: "* * * * *"
+    workflow_dispatch:
 jobs:
     echo:
         runs-on: ubuntu-latest
